--- a/system9.css
+++ b/system9.css
@@ -272,3 +272,37 @@ section dl {
 section > *:last-child {
     padding-bottom: 10px;
 }
+
+/* --- Progress Bar --- */
+progress, meter {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 16px;
+    border: 1px solid #000000;
+    background-color: #cccccc;
+    box-shadow: 1px 1px 0 #ffffff;
+    margin: 10px 0;
+}
+
+progress::-webkit-progress-bar,
+meter::-webkit-meter-bar {
+    background-color: #cccccc;
+    box-shadow: inset 1px 1px 0 #888888;
+}
+
+progress::-webkit-progress-value,
+meter::-webkit-meter-optimum-value {
+    background: 
+        linear-gradient(to right, #000044 0%, transparent 4px, transparent calc(100% - 4px), #000044 100%),
+        linear-gradient(to bottom, #000044 0%, #5555cc 25%, #ffffff 50%, #5555cc 75%, #000044 100%);
+}
+
+progress::-moz-progress-bar,
+meter::-moz-meter-bar {
+    background: 
+        linear-gradient(to right, #000044 0%, transparent 4px, transparent calc(100% - 4px), #000044 100%),
+        linear-gradient(to bottom, #000044 0%, #5555cc 25%, #ffffff 50%, #5555cc 75%, #000044 100%);
+}
+
