--- a/system9.css
+++ b/system9.css
@@ -337,4 +337,51 @@ input[type="reset"]:active {
         1px 1px 0px #ffffff; /* Outer drop shadow highlight */
 }
 
+/* --- Radio Buttons --- */
+input[type="radio"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background-color: #dddddd;
+    border: 1px solid #000000;
+    box-shadow: 
+        inset 1px 1px 0px #ffffff,
+        inset -1px -1px 0px #888888;
+    margin: 0 5px 0 0;
+    position: relative;
+    top: 2px;
+    outline: none;
+}
+
+input[type="radio"]:checked::before {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background-color: #000000;
+}
+
+/* Disabled state for radio buttons */
+input[type="radio"]:disabled {
+    border-color: #888888;
+    box-shadow: none;
+}
+
+input[type="radio"]:disabled:checked::before {
+    background-color: #888888;
+}
+
+/* Label styling for disabled state */
+input[type="radio"]:disabled + label,
+label:has(input[type="radio"]:disabled) {
+    color: #888888;
+}
+
+
 
