--- a/system9.css
+++ b/system9.css
@@ -128,6 +128,8 @@ section {
     max-width: 800px;
     position: relative;
     border-radius: 2px;
+    resize: both;
+    overflow: auto;
 }
 
 /* The title bar */
